added {% load static %} to all templates

--- a/src/binders/templates/header.html
+++ b/src/binders/templates/header.html
@@ -1,4 +1,5 @@
-  <header>
+{% load static %}
+<header>
     <img src="{% static 'images/logo.png' %}" alt="ProsePal logo" id="logo">
     <div id="toggle">
       <p id="toggleLabel">Dark mode</p>
