--- a/src/binders/templates/index.html
+++ b/src/binders/templates/index.html
@@ -1,13 +1,13 @@
 {% extends 'normal-base.html' %}
-
+{% load static %}
 {% block title %}LoreBinders{% endblock %}
 
 {% block extra_css %}
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <link rel="stylesheet" href="{% static 'css/landing.css' %}">
+  <link rel="stylesheet" href="{% static 'css/landing.css' %}" />
 {% endblock extra_css %}
 {% block extra_js %}
-  <script src="{% static, 'js/mailerlite.js' %}"></script>
+  <script src="{% static 'js/mailerlite.js' %}"></script>
   <script>
     document.addEventListener('DOMContentLoaded', (event) => {
       const faqQuestions = document.querySelectorAll('.faq-question');
@@ -212,7 +212,3 @@
     <a href="https://www.linkedin.com/company/prosepal">LinkedIn</a>
   </div>
 {% endblock footer %}
-
-{% block extra_js %}
-
-{% endblock extra_js %}
