--- a/src/binders/templates/instructions.html
+++ b/src/binders/templates/instructions.html
@@ -1,4 +1,5 @@
 {% extends 'container-base.html' %}
+{% load static %}
 
 {% block title %}Finetuner Instructions{% endblock %}
 {% block extra_css %}
