moved visibility toggle javascript to standalone script instead of inline to reusse it for signup and login pages

--- a/src/binders/templates/finetune.html
+++ b/src/binders/templates/finetune.html
@@ -34,21 +34,5 @@
   {% include 'finetune-footer.html' %}
 {% endblock footer %}
 {% block end_js %}
-  <script>
-    function toggleVisibility() {
-      var apiKeyInput = document.getElementById("user_key");
-      var currentType = apiKeyInput.getAttribute("type");
-      apiKeyInput.setAttribute("type", currentType === "password" ? "text" : "password");
-      var visibilityImage = document.getElementById("visibilityImage");
-      if (currentType === "password") {
-    // If the password is visible, set the image to invisible.png
-        visibilityImage.src = "static/invisible.png";
-        visibilityImage.alt = "hide key"
-      } else {
-    // If the password is hidden, set the image to visibility.png
-        visibilityImage.src = "static/visibility.png";
-        visibilityImage.alt = "show key"
-      }
-    }
-  </script>
+  <script src="{% static 'js/visToggle.js' %}"></script>
 {% endblock end_js %}
