--- a/src/binders/templates/convert-ebook.html
+++ b/src/binders/templates/convert-ebook.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{% static 'css/finetuner.css' %}">
 {% endblock extra_css %}
 {% block extra_js %}
-  <script src="{% static, 'js/convert-ebook.js' %}"></script>
+  <script src="{% static 'js/convert-ebook.js' %}"></script>
 
   </script>
 {% endblock extra_js %}
@@ -33,8 +33,8 @@
   <span> | </span>
   <a href ="https://github.com/ashrobertsdragon/convert_ebook_files">Code available on GitHub under MIT License</a>
   <span> | </span>
-  <a href="{{ url_for('static', filename='html/terms.html') }} target="_blank">Terms and Conditions</a>
+  <a href="{% static ''html/terms.html' %} target="_blank">Terms and Conditions</a>
   <span> | </span>
-  <a href="{{ url_for('static', filename='html/privacy.html') }}" target="_blank">Privacy Policy</a>
+  <a href="{% static 'html/privacy.html' %}" target="_blank">Privacy Policy</a>
 </div>
 {% endblock footer %}
