--- a/src/binders/templates/finetune-footer.html
+++ b/src/binders/templates/finetune-footer.html
@@ -4,9 +4,9 @@
       <span> | </span>
       <a href ="https://github.com/ashrobertsdragon/Finetune-GPT-3.5-for-Authors">Code available on GitHub under MIT License</a>
       <span> | </span>
-      <a href="/terms" target="_blank">Terms and Conditions</a>
+      <a href="{% url 'terms' %}" title="Terms of service" target="_blank">Terms and Conditions</a>
       <span> | </span>
-      <a href="/privacy" target="_blank">Privacy Policy</a>
+      <a href="{% url 'privacy' %}" title="Privacy policy" target="_blank">Privacy Policy</a>
     </div>
     <div>
       <a href="https://www.flaticon.com/free-icons/hide" target="_blank" rel="noopener" title="hide icons">Hide icons created by Google - Flaticon</a>
