added link back to home page in header

--- a/src/binders/templates/header.html
+++ b/src/binders/templates/header.html
@@ -1,6 +1,8 @@
 {% load static %}
-<header>
-    <img src="{% static 'images/logo.png' %}" alt="ProsePal logo" id="logo">
+  <header>
+    <a href="https://prosepal.io/" title="homepage">
+      <img src="{% static 'images/logo.png' %}" alt="ProsePal logo" id="logo">
+    </a>
     <div id="toggle">
       <p id="toggleLabel">Dark mode</p>
       <label class="switch">
@@ -8,4 +10,4 @@
         <span class="slider round"></span>
       </label>
     </div>
-  </header>
+  </header> 
