--- a/src/binders/templates/container-base.html
+++ b/src/binders/templates/container-base.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content-container %}
   <div class="form-container">
+    {% include "header.html" %}
     {% block content %}
-      {% include "header.html"}
       <!-- Child template content goes here -->
     {% endblock content %}
   </div>
