--- a/src/binders/templates/finetune.html
+++ b/src/binders/templates/finetune.html
@@ -8,7 +8,7 @@
 {% endblock extra_css %}
 {% block extra_js %}
   <script src="{% static 'js/finetuner.js' %}"></script>
-  <script src="{% static 'js/invalid-input.js'}"></script>
+  <script src="{% static 'js/invalid-input.js' %}"></script>
 {% endblock extra_js %}
 
 {% block content %}
