--- a/src/binders/static/css/finetuner.css
+++ b/src/binders/static/css/finetuner.css
@@ -1,50 +1,81 @@
-/* General Styling */
-body, button, label, 
+/* General styling */
+button, label, 
 select input[type="submit"],
 input[type="checkbox"] {
   font-family: 'Exo', sans-serif;
 }
+
 input, textarea {
   font-family: 'Source Sans 3', sans-serif;
 }
 
-ul {
-  list-style-type: '- ';
-  padding-right: 40px;
-}
-ul li {
-  margin-bottom: 20px;
-  text-align: justify;
+/* Inputs */
+input[type="file"] {
+  border: none;
 }
 
-section {
-  margin-top: 3rem;
-  margin-bottom: 30px;
+input[type="submit"] {
+  text-transform: uppercase;
+  display: block;
+  text-align: center;
+  width: auto;
+  background-color: hsl(120, 100%, 20%);
+  color: #DBE1E7;
+  padding: 14px 20px;
+  margin: 8px auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 0 3px #1C0B19;
 }
 
-.form-container {
-  max-width: 600px;
-  margin: 0 auto;
+input[type="submit"]:hover {
+  background-color: #089108;
 }
 
-.body-container {
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding: 0 20px;
+input::file-selector-button {
+  background-color: hsl(210, 20%, 88%);
+  padding: 14px 20px;
+  margin: 8px auto;
+  margin-right: .25em;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0.5px 1px rgba(219, 225, 231, 0.1),
+  0 0 0 1px rgba(0, 100, 0, 0.075),
+  0 0.3px 0.4px rgba(0, 100, 0, 0.02),
+  0 0.9px 1.5px rgba(0, 100, 0, 0.045),
+  0 3.5px 6px rgba(0, 100, 0, 0.09);
 }
 
+input::file-selector-button:hover {
+  background-color: hsl(210, 20%, 95%)
+}
 
+/* Labels */
+label {
+  display: flex;
+  font-size: 1.1em;
+  padding-bottom: .25em;
+}
+
+label a {
+  padding-left: .25em;
+}
+
+/* Dark mode */
 body.dark-mode label {
   color: inherit;
 }
 body.light-mode label {
   color: inherit;
 }
+
 body.dark-mode .box {
   background-color: #3F5C7D;
   box-shadow: inset 0 0 5px #DBE1E7; /* White shadow */
 } 
+
 body.dark-mode input[type="text"],
 body.dark-mode input[type="password"],
 body.dark-mode select,
@@ -75,50 +106,44 @@ body.dark-mode input::file-selector-button:hover {
   0 3.5px 6px rgba(244, 238, 144, 0.09);
 }
 
-button, input[type="submit"] {
-  transition: background-color 0.3s ease;
+/* Containers */
+div {
+  padding-bottom: .5em;
 }
 
-/*box container */
+.form {
+  padding-bottom: .5em;
+}
+
 .box {
   margin: 0 auto;
   padding: 20px 40px;
   box-shadow: 0 0 10px rgba(0, 0, 0.1);
   background-color: #BBE5ED;
   border-radius: 8px;
-  }
-label {
-  display: flex;
-  font-size: 1.1em;
-  padding-bottom: .25em;
-}
-div {
-  padding-bottom: .5em;
-}
-#chunk, .metadata {
-  margin-right: auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-#chunk, .metadata label {
-  margin-right: .25em;
-  white-space: nowrap;
-}
-select {
-  margin-left: .25em;
-}
+ }
 
 #box {
   text-align: center;
 }
 
-.metadata label {
-  width: 3em;
+
+/* Finetuner */
+#role {
+  min-height: 5em;
+  width: 100%;
+  resize: both; /* Resizable corner */
 }
 
-.form {
-  padding-bottom: .5em;
+#key {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+#user_key {
+  flex-grow: 1;
+  margin-right: -18px;
 }
 
 #file-upload {
@@ -136,116 +161,76 @@ select {
   padding-bottom: 0;
 }
 
-.required {
-  color: #ff0000;
-  font-weight: bold;
-  font-size: .9em;
-  padding-top: .1em;
-  padding-left: .2em;
-  text-transform: uppercase;
-}
-body.dark-mode .required {
-  color: magenta;
-  font-size: 1.1em;
-}
-
 #rights input[type="checkbox"], 
 #terms input[type="checkbox"] {
   margin-right: 5px;
 }
 
-input[type="text"],
-input[type="password"],
-textarea,
-select {
-  font-size: .9em;
-  width: auto;
-  padding: 8px;
-  border-radius: 4px;
-  box-shadow: 0 0 3px rgba(63, 92, 125, 1);
+.info-list a {
+  font-style: italic;
 }
 
-#role {
-  min-height: 5em;
+/* Error Modal */
+.modal {
+  display: none; /* Hide the modal by default */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
   width: 100%;
-  resize: both; /* Resizable corner */
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
 }
 
-#key {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  position: relative;
-}
-#user_key {
-  flex-grow: 1;
-  margin-right: -18px;
-}
-/* Show Button with Eye Icon */
-button#showButton {
-  position: absolute;
-  right: -14px;
-  top: 41%;
-  transform: translateY(-50%);
-  margin: 0;
+.modal-content {
   background-color: #DBE1E7;
-  border: none;
-  border-radius: 2px;
-  padding:  0 8px;
-  height: 66%;
-  width: 6%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 10;
-}
-button#showButton:hover {
-  background-color: hsl(210, 20%, 95%) !important;
-}
-#visibilityImage {
-  height: 15px;
-  width: 15px;
-  background-color: #DBE1E7;
-}
-input[type="file"] {
-  border: none;
-}
-input[type="submit"] {
-  text-transform: uppercase;
-  display: block;
+  color: #1C0B19;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #BBE5ED;
+  width: 50%;
   text-align: center;
-  width: auto;
-  background-color: hsl(120, 100%, 20%);
+}
+body.dark-mode .modal-content {
+  background-color: #1C0B19;
   color: #DBE1E7;
-  padding: 14px 20px;
-  margin: 8px auto;
-  border: none;
-  border-radius: 4px;
+  border: 1px solid #3F5C7D
+}
+
+.close {
+  color: #BBE5ED;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
   cursor: pointer;
-  box-shadow: 0 0 3px #1C0B19;
 }
-input[type="submit"]:hover {
-  background-color: #089108;
+
+/* Ebook converter */
+.metadata label {
+  width: 3em;
 }
-input::file-selector-button {
-  background-color: hsl(210, 20%, 88%);
-  padding: 14px 20px;
-  margin: 8px auto;
+#convert-link {
+  text-align: center;
+}
+
+/* Joint */
+#chunk, .metadata {
+  margin-right: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+#chunk, .metadata label {
   margin-right: .25em;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  box-shadow: inset 0 0 0.5px 1px rgba(219, 225, 231, 0.1),
-  0 0 0 1px rgba(0, 100, 0, 0.075),
-  0 0.3px 0.4px rgba(0, 100, 0, 0.02),
-  0 0.9px 1.5px rgba(0, 100, 0, 0.045),
-  0 3.5px 6px rgba(0, 100, 0, 0.09);
-}
-input::file-selector-button:hover {
-  background-color: hsl(210, 20%, 95%)
+  white-space: nowrap;
 }
 
+/* Instructions */
+#closing {
+  margin-top: 50px;
+}
 
+/* Contact form */
 .contact-form {
   margin: 20px auto;
   max-width: 600px;
@@ -293,70 +278,10 @@ input::file-selector-button:hover {
   height: 5em; /* Adjust the height as needed */
 }
 
-.hidden {
-  display: none; /* Hides a container */
-}
-
-.shown {
-  display: block; /* Displays a container */
-}
-
-.modal {
-  display: none; /* Hide the modal by default */
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-  background-color: #DBE1E7;
-  color: #1C0B19;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #BBE5ED;
-  width: 50%;
-  text-align: center;
-}
-body.dark-mode .modal-content {
-  background-color: #1C0B19;
-  color: #DBE1E7;
-  border: 1px solid #3F5C7D
-}
-
-.close {
-  color: #BBE5ED;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-#convert-link {
-  text-align: center;
-}
-.info-list a {
-  font-style: italic;
-}
-
-#closing {
-  margin-top: 50px;
-}
-
-@media screen and (max-width: 600px) {
-  html, body {
-    max-width: 95%;
-  }
-
-  .form-container,
-  #user_key {
-      width: 100%;
-      box-shadow: none;
-      padding: 10px;
-  }
-
+/* Responsive changes */
+@media screen and (max-width: 768px) {
+  
+	/* Inputs */
   input[type="text"],
   input[type="password"],
   select,
@@ -379,6 +304,16 @@ body.dark-mode .modal-content {
     height: 40px;
     width: 40 px;
   }
+  
+  /* Finetuner */
+  .form-container,
+  #user_key {
+      width: 100%;
+      box-shadow: none;
+      padding: 10px;
+  }
+
+
   #checkboxes label {
     display: block;
     align-items: center;
@@ -393,63 +328,5 @@ body.dark-mode .modal-content {
   #chunk, .metadata, #key {
     flex-direction: column;
     align-items: stretch;
-  }
-
-  .header {
-    justify-content: space-between;
-    height: auto;
-    padding: 10px;
-  }
-  #logo {
-    order: -1;
-    height: 48px;
-    width: 48px;
-  }
-  #toggle {
-    order: 1;
-    padding: 0;
-    position: static;
-  }
-  .switch {
-    width: 72px;
-    height: 48px;
-    margin: 0;
-    position: relative;
-  }
-
-  .slider {
-    width: 100%;
-    height: 44px;
-    border-radius: 44px;
-  }
-
-  .slider:before {
-    width: 40px;
-    height: 36px;
-    position: absolute;
-    left: 4px;
-    bottom: 4px;
-
-  }
-  input:checked + .slider:before {
-    -webkit-transform: translateX(24px);
-    -ms-transform: translateX(24px);
-    transform: translateX(24px);
-  }
-  button#showButton {
-    width: 48px;
-    height: 48px;
-    margin: auto;
-    padding: 8px;
-    margin-top: .25em;
-    margin-right: 1.4em;
-  }
-
-  input[type="submit"],
-  button {
-    min-height: 48px;
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
   }
 }
