--- a/src/binders/templates/convert-ebook.html
+++ b/src/binders/templates/convert-ebook.html
@@ -20,10 +20,33 @@
   </div>
   {% endif %}
 
-  <form method="post">
+  <form class="box" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Convert ebook</button>
+    <div class="form" id="upload">
+      {{ form.ebook.label_tag }}
+      {{ form.ebook }}
+    </div>
+    <div class="form" id=""metadata">
+      <div class="metadata" id="title">
+        {{ form.book_title.label_tag}}
+        {{ form.book_title }}
+      </div>
+      <div class="metadata" id="author">
+        {{ form.author_name.label_tag}}
+        {{ form.author_name }}
+      </div>
+    </div>
+    <div id="checkboxes">
+      <div id="rights">
+        {{ form.rights_confirmation }}
+        {{ form.rights_confirmation.label_tag }}
+      </div>
+      <div id="terms">
+        {{ form.terms_agreement }}
+        <label for="terms_agreement">I agree to the <a href="{% static 'html/terms.html' %}" target="_blank">terms and conditions</a></label>
+      </div>
+    </div>
+    <input type="submit" value="Convert ebook" class="btn btn-primary">
   </form>
   <div id="loadingMessage" style="display: none;">Converting file, please wait...</div>
 {% endblock content %}
@@ -33,8 +56,8 @@
   <span> | </span>
   <a href ="https://github.com/ashrobertsdragon/convert_ebook_files">Code available on GitHub under MIT License</a>
   <span> | </span>
-  <a href="{% static ''html/terms.html' %} target="_blank">Terms and Conditions</a>
+  <a href="{% url 'terms' %} target="_blank">Terms and Conditions</a>
   <span> | </span>
-  <a href="{% static 'html/privacy.html' %}" target="_blank">Privacy Policy</a>
+  <a href="{% url 'privacy' %}" target="_blank">Privacy Policy</a>
 </div>
 {% endblock footer %}
