changed finetuner.css to forms.css and moved css for isntructions page to static.css

--- a/src/binders/templates/contact-us.html
+++ b/src/binders/templates/contact-us.html
@@ -3,7 +3,7 @@
 
 {% block title %}Contact Us{% endblock %}
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/finetuner.css' %}">
+  <link rel="stylesheet" href="{% static 'css/formscss' %}">
 {% endblock extra_css %}
 {% block extra_js %}
   <script src="{% static, 'js/invalid-input.js'}"></script>
