--- a/src/binders/templates/instructions.html
+++ b/src/binders/templates/instructions.html
@@ -3,7 +3,7 @@
 
 {% block title %}Finetuner Instructions{% endblock %}
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/finetuner.css' %}">
+  <link rel="stylesheet" href="{% static 'css/static.css' %}">
 {% endblock extra_css %}
 {% block content %}
     <section>
