--- a/src/binders/templates/convert-ebook.html
+++ b/src/binders/templates/convert-ebook.html
@@ -4,7 +4,7 @@
 {% block title %}ProsePal's E-book Converter{% endblock %}
 
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/finetuner.css' %}">
+  <link rel="stylesheet" href="{% static 'css/forms.css' %}">
 {% endblock extra_css %}
 {% block extra_js %}
   <script src="{% static 'js/convert-ebook.js' %}"></script>
