--- a/src/binders/templates/finetune.html
+++ b/src/binders/templates/finetune.html
@@ -4,7 +4,7 @@
 {% block title %}ProsePal's GPT 3.5 Finetuner{% endblock %}
 
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/finetuner.css' %}">
+  <link rel="stylesheet" href="{% static 'css/forms.css' %}">
 {% endblock extra_css %}
 {% block extra_js %}
   <script src="{% static 'js/finetuner.js' %}"></script>
