--- a/src/binders/templates/normal-footer.html
+++ b/src/binders/templates/normal-footer.html
@@ -1,1 +1,1 @@
-    <div class="copyright"><p>© 2024 ProsePal. Licensed under MIT license.</p></div>
+    <p class="copyright">© 2024 ProsePal. Licensed under MIT license.</p>
