--- a/src/binders/static/css/forms.css
+++ b/src/binders/static/css/forms.css
@@ -16,13 +16,14 @@ input[type="file"] {
 
 input[type="submit"] {
   text-transform: uppercase;
+  letter-spacing: .15rem;
   display: block;
   text-align: center;
   width: auto;
   background-color: hsl(120, 100%, 20%);
   color: #DBE1E7;
   padding: 14px 20px;
-  margin: 8px auto;
+  margin: 2em auto .5em;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -54,9 +55,10 @@ input::file-selector-button:hover {
 
 /* Labels */
 label {
-  display: flex;
+  display: grid;
   font-size: 1.1em;
   padding-bottom: .25em;
+  margin-right: 1rem;
 }
 
 label a {
@@ -76,8 +78,7 @@ body.dark-mode .box {
   box-shadow: inset 0 0 5px #DBE1E7; /* White shadow */
 } 
 
-body.dark-mode input[type="text"],
-body.dark-mode input[type="password"],
+body.dark-mode .user-input,
 body.dark-mode select,
 body.dark-mode textarea {
   background-color: #1C0B19;
@@ -121,12 +122,21 @@ div {
   box-shadow: 0 0 10px rgba(0, 0, 0.1);
   background-color: #BBE5ED;
   border-radius: 8px;
- }
+}
 
 #box {
   text-align: center;
 }
 
+
+/* Help-textr */
+.help-text {
+  display: none;
+}
+
+.form-grid input:hover + .help-text {
+  display: block;
+}
 
 /* Finetuner */
 #role {
@@ -205,6 +215,33 @@ body.dark-mode .modal-content {
   cursor: pointer;
 }
 
+.error {
+  color: #ff0000; /* Adjust color as needed */
+  font-size: .9em;
+}
+
+/* Visibility toggle icon */
+.password-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+.password-input {
+  padding-right: 30px;
+  flex-grow: 1;
+}
+
+#eye {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  top: 42%;
+  transform: translateY(-50%);
+}
+
 /* Ebook converter */
 .metadata label {
   width: 3em;
@@ -271,6 +308,70 @@ body.dark-mode .modal-content {
 
 .contact-form textarea {
   height: 5em; /* Adjust the height as needed */
+} 
+
+/* Signup / Login */
+.form h1 {
+  text-align: center;
+}
+.form h3 {
+  font-family: 'Share Tech', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  font-size: .75rem;
+  text-align: left;
+  letter-spacing: .05em;
+}
+#required-div {
+  text-align: left;
+  margin-right: auto;
+}
+
+.user-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: none;
+}
+
+.input-boxes {
+  width: 100%;
+  margin: auto;
+}
+.form-grid {
+  display: grid;
+  grid-template-columns: 30% 50%;
+}
+.user-input-label {
+  align-items: center;
+  text-align: left;
+  padding-right: 10px;
+}
+
+user-input,
+input[type="password"],
+input[type="text"],
+input[type="date"],
+input[type="email"] {
+  font-size: 1rem;
+  max-width: 40ch;
+  width: 100%;
+  box-sizing: border-box;
+  height: 40px;
+  padding: 8px;
+  margin: 0 auto 10px 0;
+}
+
+
+
+body.dark-mode [type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  right: 10px;
+}
+
+.switch-auth {
+  margin-top: 2em;
+  text-align: center;
 }
 
 /* Responsive changes */
@@ -280,7 +381,8 @@ body.dark-mode .modal-content {
   input[type="text"],
   input[type="password"],
   select,
-  textarea {
+  textarea,
+  .user-input {
     height: 60px;
     width: 100%;
     box-sizing: border-box;
@@ -303,11 +405,10 @@ body.dark-mode .modal-content {
   /* Finetuner */
   .form-container,
   #user_key {
-      width: 100%;
-      box-shadow: none;
-      padding: 10px;
+    width: 100%;
+    box-shadow: none;
+    padding: 10px;
   }
-
 
   #checkboxes label {
     display: block;
@@ -323,5 +424,17 @@ body.dark-mode .modal-content {
   #chunk, .metadata, #key {
     flex-direction: column;
     align-items: stretch;
+  }
+
+  .form-grid {
+    grid-template-columns: 1fr; /* Stack label and input on small screens */
+  }
+
+  .form-grid label {
+    text-align: left;
+    padding-right: 0;
+  }
+  .user-input {
+    min-height: 48px;
   }
 }
