--- a/src/binders/static/css/forms.css
+++ b/src/binders/static/css/forms.css
@@ -79,17 +79,20 @@ body.dark-mode .box {
 } 
 
 body.dark-mode .user-input,
+body.dark-mode input[type="password"],
+body.dark-mode input[type="text"],
+body.dark-mode input[type="date"],
+body.dark-mode input[type="email"],
 body.dark-mode select,
 body.dark-mode textarea {
-  background-color: #1C0B19;
-  color: #DBE1E7;
   border-radius: 4px;
   box-shadow: inset 0 0 0.5px 1px rgba(219, 225, 231, 0.1),
-  0 0 0 1px rgba(44, 11, 25, 0.075),
-  0 0.3px 0.4px rgba(44, 11, 25, 0.02),
-  0 0.9px 1.5px rgba(44, 11, 25, 0.045),
-  0 3.5px 6px rgba(44, 11, 25, 0.09) !important;
+              0 0 0 1px rgba(44, 11, 25, 0.075),
+              0 0.3px 0.4px rgba(44, 11, 25, 0.02),
+              0 0.9px 1.5px rgba(44, 11, 25, 0.045),
+              0 3.5px 6px rgba(44, 11, 25, 0.09) !important;
 }
+
 body.dark-mode input[type="submit"],
 body.dark-mode input::file-selector-button {
   box-shadow: inset 0 0 0.5px 1px rgba(219, 225, 231, 0.1),
@@ -127,7 +130,6 @@ div {
 #box {
   text-align: center;
 }
-
 
 /* Help-textr */
 .help-text {
@@ -235,6 +237,7 @@ body.dark-mode .modal-content {
 }
 
 #eye {
+  color:#1C0B19;
   position: absolute;
   right: 10px;
   cursor: pointer;
@@ -378,8 +381,10 @@ body.dark-mode [type="date"]::-webkit-calendar-picker-indicator {
 @media screen and (max-width: 768px) {
   
 	/* Inputs */
-  input[type="text"],
   input[type="password"],
+  input[type="text"],
+  input[type="date"],
+  input[type="email"],
   select,
   textarea,
   .user-input {
