--- a/src/binders/templates/login.html
+++ b/src/binders/templates/login.html
@@ -7,41 +7,44 @@
 {% endblock extra_css %}
 
 {% block content %}
-  <h2 class="content-title">Login</h2>
+<div class="form box">
   <form id="login-form" class="form" method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    {% for field in form %}
-    {% if field.name == 'password' %}
-      <div class="form-group" id="div_{{ field.name }}">
-        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-        <input type="password" name="{{ field.name }}" id="{{ field.id_for_label }}" class="form-control">
-        <!-- Show/Hide Password Button -->
-        <button id="showButton" type="button" onclick="toggleVisibility()" aria-label="Show or hide password">
-          <img id="visibilityImage" src="{% static 'images/visibility.png' %}" alt="Show/hide password">
-        </button>
-        {% if field.help_text %}
-          <small class="form-text text-muted">{{ field.help_text }}</small>
+    <h1 class="content-title">Login</h1>
+    <div class="input-boxes">
+      <!-- Email Field -->
+      <div class="form-grid" id="div-id_email">
+        <label class="user-input-label" for="{{ form.username.id_for_label }}">{{ form.username.label }}</label>
+        {{ form.username }}
+        {% if form.username.help_text %}
+          <small class="help-text">{{ form.username.help_text }}</small>
         {% endif %}
-        {% for error in field.errors %}
+        {% for error in form.username.errors %}
           <div class="error">{{ error }}</div>
         {% endfor %}
       </div>
-    {% else %}
-      <div class="form-group" id="div_{{ field.name }}">
-        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-        {{ field }}
-        {% if field.help_text %}
-          <small class="form-text text-muted">{{ field.help_text }}</small>
+      <!-- Password Field -->
+      <div class="form-grid" id="div-id_password">
+        <label class="user-input-label" for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
+        <div class="password-container">
+          {{ form.password }}
+          <span class="material-symbols-outlined" id="eye" onclick="toggleVisibility()">visibility</span>
+        </div>
+        {% if form.password.help_text %}
+          <small class="help-text">{{ form.password.help_text }}</small>
         {% endif %}
-        {% for error in field.errors %}
+        {% for error in form.password.errors %}
           <div class="error">{{ error }}</div>
         {% endfor %}
-    <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </div>
+    <input type="submit" value="Signup" class="btn btn-primary">
   </form>
   <div class="switch-auth">
     Don't have an account? <a href="{% url 'signup' %}" id="signup-link" class="auth-switch-link">Sign Up</a>
   </div>
-{% endblock %}
+</div>
+{% endblock content %}
 {% block footer %}
   {% include "normal-footer.html" %}
 {% endblock footer %}
