--- a/src/binders/static/css/landing.css
+++ b/src/binders/static/css/landing.css
@@ -1,12 +1,9 @@
-
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+main {
+  max-width: 95%;
+  padding-left: auto;
+  margin: 0 auto;
 }
+
 .section {
   margin-top: 5em;
   display: flex;
@@ -78,8 +75,6 @@
   transform: none;
   padding-bottom: 20px;
 }
-
-
 
 .hero, .solution, .features, .call-to-action, .waitlist, .faq-question {
   background: linear-gradient(0deg, #bbe5ed, #c4e1eb, #ccdfe9);
@@ -194,7 +189,11 @@ body.dark-mode .faq-question::after {
   background: #bbe5ed;
 }
 
-
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
 
 #chart {
   margin: 20px auto;
@@ -300,6 +299,12 @@ body.dark-mode .faq-question::after {
   }
   .faq-question {
     padding: 16px 10px;
+  }
+  .footer-nav,
+  .copyright,
+  .social-media-links {
+    flex-direction: column;
+    align-items: center;
   }
   #chart .horizontal-chart {
     display: none; /* Hide the horizontal chart on smaller screens */
