--- a/src/binders/templates/normal-base.html
+++ b/src/binders/templates/normal-base.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content-container %}
-  {% block content %}
-    {% include "header.html"}
-      <!-- Child template content goes here -->
-  {% endblock content %}
+  {% include "header.html" %}
+    {% block content %}
+    <!-- Child template content goes here -->
+    {% endblock content %}
 {% endblock content-container %}
