--- a/src/binders/templates/normal-base.html
+++ b/src/binders/templates/normal-base.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content-container %}
+  <div class="body-container">
   {% include "header.html" %}
     {% block content %}
     <!-- Child template content goes here -->
     {% endblock content %}
+  </div>
 {% endblock content-container %}
