--- a/src/binders/templates/base.html
+++ b/src/binders/templates/base.html
@@ -31,7 +31,7 @@
 </head>
 <body class="light-mode">
 
-
+  {% include "header.html" %}
   {% block content-container %}
     <!-- Placeholder for the main content of each page -->
   {% endblock content-container %}
